Working detail views for multiple event types

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,10 @@
 %body
   #container
     #global
+      %ul
+        %li.available-services
+          = link_to "Available Services", '#'
+        
     #main
       .content
         .ui-widget= yield
