--- a/frontend/sass/_feedback.sass
+++ b/frontend/sass/_feedback.sass
@@ -1,3 +1,5 @@
+@import feedback/comment_form
+
 .feedback
   border-top: 1px solid #d4d4d4
   margin: 12px 0 0
@@ -21,33 +23,8 @@
         margin: 0 0 7px
         font-size: 11px
 
-
+  +comment-form(142px)
   div.comment
-    clear: both
-    +speech-bubble(142px)
-    margin-top: 12px
-    position: relative
-    top: 10px
-    .cancel
-      line-height: 0
-      float: right
-      margin: 5px 0 0 0
-    h4
-      margin-bottom: 0
-    textarea
-      height: 70px
-      font-size: 12px
-      width: 282px
     .buttons
-      +clearfix
-      button
-        +float(right)
-        margin: 0 0 0 10px
       p
         display: none
-  p.thanks
-    clear: both
-    text-align: center
-    padding: 1em 0
-    color: #090
-    font-weight: bold
