--- a/frontend/sass/screen.sass
+++ b/frontend/sass/screen.sass
@@ -22,11 +22,14 @@
 
 #container
   position: relative
+  padding-top: 20px
 
 #global
+  float: right
   position: absolute
   top: 2px
   right: 15px
+  display: none
   ul
     +horizontal-list(5px)
     a
