--- a/frontend/views/feedback/comment.handlebars
+++ b/frontend/views/feedback/comment.handlebars
@@ -5,6 +5,6 @@
 <textarea>{{comment}}</textarea>
 
 <div class="buttons">
-<button>Share</button>
-<p><strong>Your review will be shared, not your name.</strong>  <br />Enjoy your anonymity -- use it for good, not evil.</p>
+  <button>{{ buttonText }}</button>
+  <p><strong>Your review will be shared, not your name.</strong>  <br />Enjoy your anonymity -- use it for good, not evil.</p>
 </div>
