--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -17,12 +17,14 @@
   %script{:src => google_js_src, :type => 'text/javascript'}
 
   :javascript
-    require({ baseUrl: "/javascripts/compiled" }, ["order!vendor/underscore", "order!vendor/backbone", "order!app/controllers/member_timeline_controller"], function(underscore, backbone, MemberTimelineController) {
+    require({ baseUrl: "/javascripts/compiled" }, ["order!vendor/underscore", "order!vendor/backbone", "order!app/controllers/members/timeline_controller", "order!app/controllers/members/available_services_controller"], function(underscore, backbone, MemberTimelineController, AvailableServicesController) {
 
       Backbone.emulateHTTP = true;
 
-      var controller = new MemberTimelineController({
+      var timelineController = new MemberTimelineController({
         fetchOnInit: true
       });
+
+      var availableServicesController = new AvailableServicesController();
 
     });
