--- a/frontend/sass/events/_detail.sass
+++ b/frontend/sass/events/_detail.sass
@@ -1,12 +1,14 @@
 @import ui_mixins
 @import feedback
 @import events/billpay/detail
+@import events/check/detail
 
 #event-detail-view
   +billpay-detail-view
+  +check-detail-view
   position: fixed
   color: #444
-  top: 32px
+  top: 42px
   left: 630px
   padding: 25px 10px 20px 15px
   border: 1px solid #ccc
@@ -46,3 +48,22 @@
       font-size: 11px
       margin: 0.2em 0
 
+  .available-service
+    margin: 10px 0 0
+    border: 1px solid #92c5e0
+    background: #fff url(/images/vcu/avatar.png) no-repeat 7px 12px
+    padding: 7px 5px 7px 55px
+    font-size: 11px
+    h2
+      font-size: 14px
+      margin: 0
+    p
+      +reset-box-model
+      margin: 0.2em 0 0.5em
+    ul
+      +no-bullets
+      +reset-box-model
+      li
+        margin: 0 0 0.5em
+        .yes
+          font-weight: bold
