--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -17,12 +17,13 @@
   %script{:src => google_js_src, :type => 'text/javascript'}
 
   :javascript
-    require({ baseUrl: "/javascripts/compiled" }, ["order!vendor/underscore", "order!vendor/backbone", "order!app/controllers/members/timeline_controller", "order!app/controllers/members/available_services_controller"], function(underscore, backbone, MemberTimelineController, AvailableServicesController) {
+    require({ baseUrl: "/javascripts/compiled" }, ["order!vendor/underscore", "order!vendor/backbone", "order!app/controllers/members/timeline_controller", "order!app/controllers/members/available_services_controller", "order!app/models/event_list"], function(underscore, backbone, MemberTimelineController, AvailableServicesController, EventList) {
 
       Backbone.emulateHTTP = true;
 
       var timelineController = new MemberTimelineController({
-        fetchOnInit: true
+        fetchOnInit: true,
+        events: new EventList()
       });
 
       var availableServicesController = new AvailableServicesController();
