--- a/frontend/sass/_timeline.sass
+++ b/frontend/sass/_timeline.sass
@@ -1,8 +1,9 @@
 @import ui_mixins
+@import feedback/row
 
 $table_padding = 12px
 
-.rating
+div.rating
   width: 105px !important
   .star, .cancel, .commentLink
     display: inline-block
