--- a/frontend/views/common/feedback/timeline/row.handlebars
+++ b/frontend/views/common/feedback/timeline/row.handlebars
@@ -2,10 +2,10 @@
   <span>{{ formatted_timestamp }}<span>
 </td>
 <td class="comment">
-  {{ teller_comment }}
-  {{#teller_comment_meta}}
-    <p class="meta">{{ . }}</p>
-  {{/teller_comment_meta}}
+  {{#teller_comment}}
+  <p class="description">{{ . }}</p>
+  {{/teller_comment}}
+  <p class="meta">Feedback provided by {{ member_name }} on 1/21 | <a href="#">Create a service request</a></p>
 </td>
 <td class="rating"></td>
 
