--- a/frontend/sass/_feedback.sass
+++ b/frontend/sass/_feedback.sass
@@ -15,6 +15,9 @@
       background: #fff
       border: 1px solid #ddd
       margin: 0 7px 0 0
+      img
+        width: 48px
+        height: 48px
     .question-and-rating
       +float(left)
       +clearfix
