--- a/frontend/sass/_base.sass
+++ b/frontend/sass/_base.sass
@@ -23,7 +23,7 @@ $timeline_font_color = $font_color
 @import blueprint/screen
 
 body
-  background: #D3DADF url(/images/background.png) repeat-x left top
+  background: #fff url(/images/background.png) repeat-x left top
 
 textarea
   font-family: $blueprint_font_family
