--- a/frontend/sass/events/_detail.sass
+++ b/frontend/sass/events/_detail.sass
@@ -14,7 +14,7 @@
   border: 1px solid #ccc
   border-width: 1px 1px 1px 0
   +border-right-radius(5px)
-  background: #f6f6f6
+  background: #fff
   width: 318px
   min-height: 500px
   .close
